--- a/_posts/2018-10-17-node.js学习之旅--node.js全局对象.md
+++ b/_posts/2018-10-17-node.js学习之旅--node.js全局对象.md
@@ -63,7 +63,7 @@ dirname: /home/wangding/node.js/nodejs-demo/02-global-var
 
 ### 全局：控制台
 
-#### 控制台输出信息
+##### 控制台输出信息
 
 console控制台：`console`用于提供控制台标准输出，它是一种调试工具，后来逐渐成为了标准
 
@@ -118,7 +118,7 @@ console.error('Error：something wrong!');
 在输出控制台中console.log()和console.error()没有什么区别，所以可以通过Linux的输出重定向
 ```
 
-#### 控制台基准测试
+##### 控制台基准测试
 
 - 对耗时任务运行的时间进行采样
 - 在控制台输出采样的时间
@@ -144,7 +144,7 @@ test：91.867ms // 每次测试的结果是不同的
 
 ### 全局：进程
 
-#### 获取平台信息
+##### 获取平台信息
 
 - 向控制台打印 CPU 架构信息以及操作系统版本信息
 - 打印进程 id 信息以及 Node.js 可执行文件的绝对路径信息
@@ -212,7 +212,7 @@ external:  8380
 log("env: ",process.env);
 ```
 
-#### 获取命令行参数
+##### 获取命令行参数
 
 - 获取命令行参数，命令行参数为一个数学表达式
 - 如果没有命令行参数，打印程序的使用说明
@@ -253,7 +253,7 @@ Mandatory arguments to long options are mandatory for short options too.
 2*Math.PI=6.283185307179586
 ```
 
-#### 处理退出码
+##### 处理退出码
 
 退出码实质上是给程序看的，在Linux程序中，有时候子进程会输出退出码，父进程通过查看子进程输出的退出码来判断是否正确
 
@@ -279,7 +279,7 @@ process.exit(code);
 // 获取退出码 echo $?
 ```
 
-#### 操作标准输入输出流
+##### 操作标准输入输出流
 
 - 逐条打印提示信息：姓名、邮箱、QQ、手机
 - 读取用户键盘输入信息，保存到对象中
@@ -307,7 +307,7 @@ process.stdin.on('end',()=>{
 });
 ```
 
-#### 处理信号量
+##### 处理信号量
 
 - 接收信号量，并对信号（SIGINT 和 SIGTSTP）进行处理
 - 用控制台快捷键，给程序脚本发送信号量，测试程序的功能逻辑
@@ -335,7 +335,7 @@ process.on('SIGTSTP',()=>{
 */
 ```
 
-#### 实现 my-kill 程序
+##### 实现 my-kill 程序
 
 - 获取命令行参数，得到进程 ID 信息和信号量标识符
 - 向指定进程 ID 的进程发送特定的信号量
@@ -352,7 +352,7 @@ process.kill(pid,sig);
 
 ### 全局：定时器
 
-#### 实现延迟执行任务
+##### 实现延迟执行任务
 
 - 定义一个定时炸弹对象
 - 定时炸弹对象和 setTimeout 函数绑定
@@ -388,7 +388,7 @@ var time = global.setTimeout(b.explode.bind(b),2000);
 //global.clearTimeout(time);
 ```
 
-#### 实现定时执行任务
+##### 实现定时执行任务
 
 - 定时执行任务
 - 用两种方式取消定时器，分别是：
@@ -425,7 +425,7 @@ JavaScript 语言自身只有字符串数据类型，没有二进制数据类型
 
 在 Node.js 中，Buffer 类是随 Node 内核一起发布的核心库。Buffer 库为 Node.js 带来了一种存储原始数据的方法，可以让 Node.js 处理二进制数据，每当需要在 Node.js 中处理I/O操作中移动的数据时，就有可能使用 Buffer 库。原始数据存储在 Buffer 类的实例中。一个 Buffer 类似于一个整数数组，但它对应于 V8 堆内存之外的一块原始内存。
 
-#### Buffer基本操作
+##### Buffer基本操作
 
 - 实例化一个 buffer 对象 buf1，缓冲区的大小是 256 字节，初始化第一个字节为23，控制台打印 buf1 的长度和内容
 - 通过循环初始化 buf1 的每个字节，每个字节比上个字节大 1，控制台打印 buf1 的内容
@@ -481,7 +481,7 @@ sourceEnd - 数字, 可选, 默认: buffer.length
 */
 ```
 
-#### Buffer 编码
+##### Buffer 编码
 
 在计算机中，文件的编码有两种方式，一种方式是通过文本文件进行编码（例如：`utf-8 ascii utf16le`），另一种方式是通过二进制文件进行编码的（例如：`base64 lantin1 hex`）
 
@@ -521,7 +521,7 @@ var buf = new Buffer(str);
 console.log("base64 content:",buf.toString('base64'));
 ```
 
-#### Buffer 解码
+##### Buffer 解码
 
 - 从命令行参数获取用户名和密码信息的 base64 编码字符串
 - 命令行参数的格式：`cmd base64_string`
@@ -548,7 +548,7 @@ if(data.length !== 2){
 console.log("name:" + data[0] + ' pwd:' + data[1]);
 ```
 
-#### Buffer 实现 Data URI
+##### Buffer 实现 Data URI
 
 DATA－URI 是指可以在Web 页面中包含图片但无需任何额外的HTTP 请求的一类URI.（类似将图片的base64码添加到`src`属性上）
 
@@ -598,7 +598,7 @@ http.createServer((req,res)=>{
 }).listen(8080);
 ```
 
-#### Buffer 读取位图信息
+##### Buffer 读取位图信息
 
 读取一个BMP文件，需要知道二进制文件的存储的三方面内容：
 
@@ -637,7 +637,7 @@ buf.readUInt32LE(offset[, noAssert])
 */
 ```
 
-#### Buffer 写入位图文件
+##### Buffer 写入位图文件
 
 - 从命令行参数获取图片文件名
 - 命令行参数的格式：`cmd file_name`
@@ -698,7 +698,7 @@ JS 模块化的两种方案分别是：`AMD` 和 `CommonJS`
 ![module分类](https://upload-images.jianshu.io/upload_images/12817540-f96be9fd69cfed39.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 
-#### 使用第三方模块
+##### 使用第三方模块
 
 - 导入 date-now 模块
 - 调用 date-now 模块的 now 方法，在控制台打印 now 的运行结果
@@ -759,7 +759,7 @@ console.log(Date.now());
 
 如果我们使用的是别人的npm的包管理器的时候，只需要在别人的项目下运行npm install命令，就可以让程序自动下载程序运行时所需要的所有模块
 
-#### 创建并使用模块，导出变量
+##### 创建并使用模块，导出变量
 
 - 在 02-export-var.js 脚本中导出变量 Math.PI打印 module 信息
 - 在 02-main.js 脚本中导入上面的模块
@@ -783,7 +783,7 @@ console.log();
 console.dir(module);
 ```
 
-#### 创建并使用模块，导出函数
+##### 创建并使用模块，导出函数
 
 - 在 02-export-function.js 脚本中定义 circle 函数
 - 函数的入口参数是圆的半径
@@ -817,7 +817,7 @@ log(circle(20).circumference());
 log(circle(20).area());
 ```
 
-#### 创建并使用模块，导出对象
+##### 创建并使用模块，导出对象
 
 - 在 02-export-object.js 脚本中定义 Circle 对象字面量
 - Circle 对象有三个公开方法，分别计算圆的直径、面积和周长
@@ -845,7 +845,7 @@ log(circle.circumference(20));
 log(circle.area(20));
 ```
 
-#### 使用全局对象 global
+##### 使用全局对象 global
 
 - 在 03-global.js 定义模块级变量 pi, 函数 circle 以及对象字面量 objCircle
 - 编写 03-main.js 脚本，导入 03-global.js 脚本
@@ -881,7 +881,7 @@ console.log(global.circle(20).circumference());
 console.log(global.circleobj.area(20));
 ```
 
-#### 使用模块级变量在对象间共享信息
+##### 使用模块级变量在对象间共享信息
 
 - 编写 04-share.js 脚本，定义模块级变量 count，定义构造函数 Num
 - Num 有两个公开方法：add 让 count 加一，getCount 得到 count 的值
@@ -925,7 +925,7 @@ n2.getcount();
 3
 ```
 
-#### npm模块的目录结构和程序结构
+##### npm模块的目录结构和程序结构
 
 ![目录结构](https://upload-images.jianshu.io/upload_images/12817540-61b06fdb101b834e.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![程序结构](https://upload-images.jianshu.io/upload_images/12817540-57b7c9a57ef0be5c.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
